<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="20dp"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_centerInParent="true"
            android:src="@drawable/logo"
            android:layout_width="100dp"
            android:layout_height="100dp"/>
    </RelativeLayout>

    <TextView
        style="@style/login_title"
        android:id="@+id/register_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_title_register" />

    <EditText
        android:id="@+id/register_edit_names"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_baseline_person_24"
        style="@style/input_text"
        android:hint="@string/hint_register_names"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/register_edit_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_baseline_email_24"
        style="@style/input_text"
        android:hint="@string/hint_login_email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/register_edit_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_baseline_key_24"
        style="@style/input_text"
        android:hint="@string/text_login_password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/register_edit_validate_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_baseline_security_24"
        style="@style/input_text"
        android:hint="@string/text_register_validate_password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btn_register"
        android:text="@string/text_button_register"
        android:layout_marginTop="20dp"
        style="@style/btn_fill"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>