<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:padding="20dp"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/layout_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_centerInParent="true"
            android:src="@drawable/logo"
            android:layout_width="100dp"
            android:layout_height="100dp"/>
    </RelativeLayout>

    <TextView
        style="@style/login_title"
        android:id="@+id/login_title"
        android:layout_below="@+id/layout_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_title_login" />

    <EditText
        android:id="@+id/login_edit_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_title"
        android:drawableStart="@drawable/ic_baseline_email_24"
        style="@style/input_text"
        android:ems="10"
        android:hint="@string/hint_login_email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/login_edit_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_edit_email"
        android:drawableStart="@drawable/ic_baseline_key_24"
        style="@style/input_text"
        android:ems="10"
        android:hint="@string/text_login_password"
        android:inputType="textPassword" />

    <TextView
        android:text="@string/text_login_forgotten_password"
        android:id="@+id/text_forgotten_password"
        android:layout_below="@id/login_edit_password"
        android:theme="@style/text_link"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_login"
        android:text="@string/text_button_login"
        android:layout_marginTop="20dp"
        style="@style/btn_fill"
        android:layout_below="@id/text_forgotten_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:text="@string/text_login_or_social"
        android:id="@+id/text_login_or_social"
        android:layout_below="@id/btn_login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:id="@+id/layouy_socials"
        android:layout_below="@+id/text_login_or_social"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_login_google"
            style="@style/btn_empty"
            android:text="Google"
            android:layout_weight="1"
            android:layout_marginRight="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/btn_facebook"
            style="@style/btn_empty"
            android:text="Facebook"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/text_login_question_create_account"
            android:id="@+id/text_login_question_create_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/text_login_create_account"
            android:id="@+id/text_login_create_account"
            android:theme="@style/text_link"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>

</RelativeLayout>